# GW_XGBoost

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  requirements.txt
.codex/: config.toml
Code/: PROJECT_IO.md  README.md  main.py  pyproject.toml
Code/gwxgb/: AGENTS.md  add_cv_ols_baseline.py  gwxgb_config.yaml  gwxgb_shap.py  run_curated_output_batch.py  run_cv_bw_sweep.py  run_holdout_bw_sweep.py
Code/gwxgb/compare/: AGENTS.md  README.md  __init__.py  gwxgb_compare_all.py  gwxgb_compare_all_config.yaml  gwxgb_compare_center_local_config.yaml  gwxgb_compare_center_local_demo.py  gwxgb_compare_demo_common.py  gwxgb_compare_local_importance_config.yaml  gwxgb_compare_local_importance_demo.py  gwxgb_compare_pooled_local_config.yaml  gwxgb_compare_pooled_local_demo.py
Code/xgb/: AGENTS.md  config.yaml  feature_corr_heatmap.py  normalize_feature_table.py  spearman_corr_heatmap_batch.py  verify_fix.py  xgb_early_stopping.py  xgb_gridcv_tune.py  xgb_nestedcv_tune.py  xgb_shap.py  xgb_shap_interaction_matrix.py  xgb_shap_robustness.py  xgb_shap_tuning.md
Data/: cx1203.csv  地级市驻点经纬度.csv  终市级指标数据.csv  终市级指标数据_with_latlon.csv
Data/0114xgbData/: rj0114.csv  (+1 more)
docs/: AGENT_CONTEXT.md  LAST_STATE.md  repo_index.yaml
test/DemoGXGBoost/: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
test/DemoGXGBoost/DemoData/: Coords.csv  Data.csv  DataDescription.xlsx  GXGB_call_demo.py  PredictCoords.csv
test/DemoGXGBoost/outputs/: BW_results.csv  GXGB.xlsx  Generalized_NestedCV_Stats.csv  GlobalXGB.xlsx  Predict_results.csv
(+28 files in other folders)
