[project]
name = "demogxgboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoxgboost>=1.0.9",
    "scikit-learn==1.5.2",
    "shap>=0.49.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
